ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp
spec:
  replicas: 1
  template:
    metadata:
      name: 
    spec:
      containers:
        - name: nginx-webapp
          image: nginx
        - name: busybox
          image: busybox
          command: ["/bin/sh"]
          args: ["-c", "echo '<h1></h1>'"]
