ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-webapp
spec:
  selector:
    app: nginx-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
