ingress/nginx-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-webapp
spec:
  rules:
    - host: nginx-webapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-webapp
                port:
                  number: 80
